--- a/social-proof-section/style.css
+++ b/social-proof-section/style.css
@@ -7,7 +7,11 @@
 }
 
 :root {
+  position: relative;
+  max-width: 100vw;
   overflow-x: hidden;
+  min-height: 100vh;
+
   font-size: 16px;
   font-family: 'Spartan', sans-serif;
 
@@ -38,6 +42,7 @@ body {
   position: relative;
   overflow-x: hidden;
   min-height: 100vh;
+  max-width: 100vw;
 }
 
 p {
@@ -232,7 +237,6 @@ p {
 
 @media screen and (min-width: 1280px) {
   body {
-    overflow: initial;
     position: relative;
   }
 
